First big test.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Jack Williams <jack@tagstr.co>",
   "license": "ISC",
   "dependencies": {
-    "debug": "^2.2.0"
+    "debug": "^2.2.0",
+    "glob": "^7.0.4"
   },
   "devDependencies": {
     "chai": "^3.5.0",
