--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "microboot",
-  "version": "1.1.2",
-  "description": "Boot up your app in wee little modules.",
+  "version": "1.1.3",
+  "description": "Boot up your app in wee little modules with the help of glob.",
   "main": "index.js",
   "scripts": {
     "test": "node_modules/.bin/mocha --reporter spec --require test/bootstrap/node test/*.test.js test/**/*.test.js",
@@ -35,7 +35,8 @@
     "service",
     "microservice",
     "microservices",
-    "phase"
+    "phase",
+    "glob"
   ],
   "bugs": {
     "url": "https://github.com/jpwilliams/microboot/issues"
