--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "debug": "^2.4.1",
-    "glob": "^7.1.1"
+    "glob": "^7.1.1",
+    "microloader": "^0.2.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
