--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "2.1.4",
   "description": "Boot up your app in wee little modules with the help of glob.",
   "main": "index.js",
+  "engines": {
+    "node": ">=7"
+  },
   "scripts": {
     "test": "node_modules/.bin/mocha --reporter spec --require test/bootstrap/node test/*.test.js test/**/*.test.js",
     "coverage": "node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec --require test/bootstrap/node test/*.test.js test/**/*.test.js && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
