--- a/package.json
+++ b/package.json
@@ -21,10 +21,7 @@
     "chai": "^4.1.0",
     "coveralls": "^2.13.1",
     "istanbul": "^1.0.0-alpha.1",
-    "mocha": "^3.4.2",
-    "once": "^1.4.0",
-    "sinon": "^2.3.8",
-    "sinon-chai": "^2.11.0"
+    "mocha": "^3.4.2"
   },
   "repository": {
     "type": "git",
